<resources>
    <string name="app_name">donderballer</string>
    <string name="facebook_app_id">1555622314553776</string>
    <string name="fb_login_protocol_scheme">fb1555622314553776</string>

    <string name="title_activity_login">Sign in</string>
    <string name="greeting">Hello there</string>

    <!-- Strings related to login -->
    <string name="welcome_message">Welkom</string>
    <string name="error_retrieving_name">Naam niet gevonden.</string>

    <!-- Strings related to Facebook comments -->
    <string name="title_activity_comments">Comments</string>
    <string name="action_comment">Comment</string>
    <string name="action_refresh">Reload</string>
    <string name="title_activity_fb_comments">FbCommentsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="ranking">Ranking</string>
    <string name="attending">Komende</string>
    <string name="lastGame">Laatste Match</string>
    <string name="game">Match</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Strings related to ranking -->
    <string name="rankTitle">RK</string>
    <string name="nameTitle">Speler</string>
    <string name="canOpenerTitle">CO</string>
    <string name="peaCrusherTitle">PC</string>
    <string name="pariBlastTitle">PB</string>
    <string name="scoreTeamA">null</string>
    <string name="scoreTeamB">null</string>
    <string name="title_activity_dummy">Dummy</string>

    <!-- toolbar strings -->
    <string-array name="activities">
        <item> Test</item>
        <item> Ranking</item>
        <item> Attending</item>
        <item> Game</item>
        <item> Last Game</item>
    </string-array>


</resources>
