<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="beers.donderballer.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/showRanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:onClick="ranking"
            android:text="@string/ranking"
            android:theme="@style/buttons"/>

        <Button
            android:id="@+id/startGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:onClick="game"
            android:text="@string/game"
            android:theme="@style/buttons"/>

        <Button
            android:id="@+id/showLastGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:onClick="lastGame"
            android:text="@string/lastGame"
            android:theme="@style/buttons"/>

        <Button
            android:id="@+id/showAttending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:onClick="attending"
            android:text="@string/attending"
            android:theme="@style/buttons"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
